[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/MenuBackground.tscn" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_settings_panel"]
bg_color = Color(0.74902, 0.74902, 0.74902, 0.96)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("4")]

[node name="Layout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 16.0
offset_right = -20.0
offset_bottom = -16.0

[node name="VBox" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Layout/VBox"]
layout_mode = 2

[node name="BackButton" parent="Layout/VBox/Header" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(126, 46)
text = "BACK"

[node name="Title" type="Label" parent="Layout/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 38
text = "SETTINGS"
horizontal_alignment = 1

[node name="HeaderSpacer" type="Control" parent="Layout/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(126, 46)

[node name="ContentPanel" type="Panel" parent="Layout/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_settings_panel")

[node name="Content" type="VBoxContainer" parent="Layout/VBox/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="MusicRow" type="HBoxContainer" parent="Layout/VBox/ContentPanel/Content"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Layout/VBox/ContentPanel/Content/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Layout/VBox/ContentPanel/Content/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 75.0

[node name="MusicValue" type="Label" parent="Layout/VBox/ContentPanel/Content/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "75%"

[node name="SfxRow" type="HBoxContainer" parent="Layout/VBox/ContentPanel/Content"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="Layout/VBox/ContentPanel/Content/SfxRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="Layout/VBox/ContentPanel/Content/SfxRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0

[node name="SfxValue" type="Label" parent="Layout/VBox/ContentPanel/Content/SfxRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "80%"
